# planex

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  org.kde.planex.desktop  org.kde.planex.metainfo.xml  planex.notifyrc  pyproject.toml
kcm/: CMakeLists.txt  kcm_planex.json  planexconfig.kcfg  planexconfig.kcfgc  planexsettings.cpp  planexsettings.h
kcm/ui/: main.qml
src/: app.py  qflatpakfetchworker.py  qflatpakmetadata.py
src/qml/: LoadingProgress.qml  Main.qml  PackagePage.qml  PreloadPage.qml  main.qml
